fix overflow on body, removed error state from MainPage not used

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
   font-size: 16px;
   width: 100vw;
   overflow: hidden;
+  overflow-y: auto;
 }
 a {
   color: var(--link-color);
